[project]
name = "pyciter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "matplotlib>=3.9.3",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "pip>=24.3.1",
    "scikit-learn>=1.6.0",
    "torch>=2.5.1",
]
